--- a/src/app/user-registry/user-basic-information/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/user-basic-information.component.html
@@ -1,39 +1,57 @@
-<form data-toggle="validator" role="form">
-    <h2>Coordonnées collaborateur</h2>    
-    <div class="form-group">
-          <label for="inputNom" class="control-label">Nom</label>
-          <input id="inputnom" class="form-control" type="text" placeholder="Jone"  pattern="[a-zA-Z àâæçéèêëîïôœùûüÿÀÂÆÇnÉÈÊËÎÏÔŒÙÛÜŸ-]{3,25}" required>
+<div class="container">
+  <div class="row">
+    <div class="col-10">
+      <h2>Coordonnées collaborateur</h2>
+      <form name="form" [formGroup]="form">
+        <div class="form-group">
+          <label for=nom>Nom</label>
+          <input type="text" class="form-control" formControlName="nom" [ngClass]="{'is-invalid': form.get('nom').touched && form.get('nom').invalid}" />
+          <div class="invalid-feedback">
+            <div>Nom est requis. </div>
+          </div>
         </div>
         <div class="form-group">
-          <label for="inputPrenom" class="control-label">Prenom</label>
-          <input id="inputprenom" class="form-control" type="text" placeholder="Saffary" pattern="[a-zA-Z àâæçéèêëîïôœùûüÿÀÂÆÇnÉÈÊËÎÏÔŒÙÛÜŸ-]{3,25}" required>
-         </div>
-         <div class="form-group">
-            <label for="inputPrenom" class="control-label">Civilité</label>
-            <label class="radio-inline"> <input type="radio"  name="gender">Female</label>
-            <label class="radio-inline"><input type="radio" name="gender">Male</label>
-         </div>
-         <div class="form-group">            
-              <label for="inputdatedarrive" class="control-label">Date d'arrivé</label>
-              <input id="inputdatedarrive" class="form-control" type="date" min="2017-01-01" required>
+          <label for=prenom>Prénom</label>
+          <input type="text" class="form-control" formControlName="prenom" [ngClass]="{'is-invalid': form.get('prenom').touched && form.get('prenom').invalid}" />
+          <div class="invalid-feedback">
+            <div>Prénom est requis. </div>
           </div>
-        <div class="form-group">
-          <label for="inputemail" class="control-label">Email</label>
-          <input id="inputemail" class="form-control" type="email" placeholder="Email" data-error="Bruh, that email address is invalid" required>
-          <div class="help-block with-errors"></div>
         </div>
         <div class="form-group">
-              <label for="inputtelephone" class="control-label">N° Téléphone</label>
-              <input id="inputtelephone" class="form-control" type="tel" placeholder="06-55-55-55-55" pattern="^\d{4}\d{2}\d{4}$" required >
+          <label for=dateArrive>Date d'arrivé</label>
+          <input type="date" class="form-control" formControlName="dateArrive" [ngClass]="{'is-invalid': form.get('dateArrive').touched && form.get('dateArrive').invalid}" />
+          <div class="invalid-feedback">
+            <div>Date d'arrivé est requis. </div>
           </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1"  class="control-label">Profile</label>
-                <select id="exampleFormControlSelect1" class="form-control">
-                    <option *ngFor="let info of profile">{{info.titre}}</option>
-                </select>
-            </div>
-      
+        </div>                
         <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <label for=email>Email</label>
+          <input type="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': form.get('email').touched && form.get('email').invalid}" />
+          <div *ngIf="form.get('email').touched && form.get('email').invalid" class="invalid-feedback">
+            <div *ngIf="form.get('email').errors.required">Email est requis. </div>
+            <div *ngIf="form.get('email').errors.email">Veuillez entrer une adresse valide. </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for=telephone>N° Téléphone</label>
+          <input type="number" class="form-control" formControlName="telephone" [ngClass]="{'is-invalid': form.get('telephone').touched && form.get('telephone').invalid}" />
+          <div class="invalid-feedback">
+            <div>N° de téléphone est requis. </div>
+          </div>
+        </div> 
+        <div class="form-group">
+          <label for=telephone>Profile</label>
+          <select class="form-control">
+            <option *ngFor="let info of profile">
+              <span> {{info.titre}}</span>
+            </option>
+          </select>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary" [disabled]="!form.valid" (click)="ajouterCollaborateur()">Submit</button>
+          <button class="btn btn-danger" type="reset" (click)="annulerForm()">Annuler</button>
         </div>
       </form>
+    </div>
+  </div>
+</div>
