--- a/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
@@ -23,33 +23,36 @@
           <div class="invalid-feedback">
             <div>Date d'arrivé est requis. </div>
           </div>
-        </div>                
-        <div class="form-group">
-          <label for=email>Email</label>
-          <input type="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': form.get('email').touched && form.get('email').invalid}" />
-          <div *ngIf="form.get('email').touched && form.get('email').invalid" class="invalid-feedback">
-            <div *ngIf="form.get('email').errors.required">Email est requis. </div>
-            <div *ngIf="form.get('email').errors.email">Veuillez entrer une adresse valide. </div>
-          </div>
-        </div>
+        </div>       
+          <div class="form-group">
+              <label for=email>Email</label>
+              <input type="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': form.get('email').touched && form.get('email').invalid}"  />
+              <div class="invalid-feedback" *ngIf="form.get('email').touched && form.get('email').invalid">
+                <div *ngIf="form.get('email').errors.required">Email est requis. </div>
+                <div *ngIf="form.get('email').errors.email">Veuillez entrer une adresse valide. </div>
+              </div>
+            </div> 
+
         <div class="form-group">
           <label for=telephone>N° Téléphone</label>
-          <input type="number" class="form-control" formControlName="telephone" [ngClass]="{'is-invalid': form.get('telephone').touched && form.get('telephone').invalid}" />
-          <div class="invalid-feedback">
-            <div>N° de téléphone est requis. </div>
+          <input type="text" appPhoneMask  
+                class="form-control"  
+                formControlName="telephone" [ngClass]="{'is-invalid': form.get('telephone').touched && form.get('telephone').invalid}"  />
+          <div class="invalid-feedback" *ngIf="form.get('telephone').touched && form.get('telephone').invalid">
+            <div *ngIf="form.get('telephone').errors.required">N° de téléphone est requis. </div>
+            <div *ngIf="form.get('telephone').errors.tel ">Veuillez entrer un numéro valide. </div>
           </div>
         </div> 
         <div class="form-group">
-          <label for=telephone>Profile</label>
+          <label for=profile>Profile</label>
           <select class="form-control">
             <option *ngFor="let info of profile">
               <span> {{info.titre}}</span>
             </option>
           </select>
         </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary" [disabled]="!form.valid" (click)="ajouterCollaborateur()">Submit</button>
-          <button class="btn btn-danger" type="reset" (click)="annulerForm()">Annuler</button>
+        <div class="form-group" id="alignement">         
+          <button type="submit" class="btn btn-primary" [disabled]="!form.valid" (click)="ajouterCollaborateur()">Enregistrer</button>
         </div>
       </form>
     </div>
