--- a/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
@@ -5,39 +5,37 @@
       <form name="form" [formGroup]="form">
         <div class="form-group">
           <label for=nom>Nom</label>
-          <input type="text" class="form-control" formControlName="nom" [ngClass]="{'is-invalid': form.get('nom').touched && form.get('nom').invalid}" />
+          <input type="text" class="form-control" formControlName="nom" minlength="3" [ngClass]="{'is-invalid': form.get('nom').touched && form.get('nom').invalid}" />
           <div class="invalid-feedback">
             <div>Nom est requis. </div>
           </div>
         </div>
         <div class="form-group">
           <label for=prenom>Prénom</label>
-          <input type="text" class="form-control" formControlName="prenom" [ngClass]="{'is-invalid': form.get('prenom').touched && form.get('prenom').invalid}" />
+          <input type="text" class="form-control" formControlName="prenom" minlength="3" [ngClass]="{'is-invalid': form.get('prenom').touched && form.get('prenom').invalid}" />
           <div class="invalid-feedback">
             <div>Prénom est requis. </div>
           </div>
         </div>
         <div class="form-group">
           <label for=dateArrive>Date d'arrivé</label>
-          <input type="date" class="form-control" formControlName="dateArrive" [ngClass]="{'is-invalid': form.get('dateArrive').touched && form.get('dateArrive').invalid}" />
+          <input type="text" class="form-control" bsDatepicker formControlName="dateArrive" [ngClass]="{'is-invalid': form.get('dateArrive').touched && form.get('dateArrive').invalid}" />
           <div class="invalid-feedback">
             <div>Date d'arrivé est requis. </div>
           </div>
         </div>       
           <div class="form-group">
-              <label for=email>Email</label>
-              <input type="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': form.get('email').touched && form.get('email').invalid}"  />
-              <div class="invalid-feedback" *ngIf="form.get('email').touched && form.get('email').invalid">
-                <div *ngIf="form.get('email').errors.required">Email est requis. </div>
-                <div *ngIf="form.get('email').errors.email">Veuillez entrer une adresse valide. </div>
-              </div>
-            </div> 
+            <label for=email>Email</label>
+            <input type="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': form.get('email').touched && form.get('email').invalid}"  />
+            <div class="invalid-feedback" *ngIf="form.get('email').touched && form.get('email').invalid">
+              <div *ngIf="form.get('email').errors.required">Email est requis. </div>
+              <div *ngIf="form.get('email').errors.email">Veuillez entrer une adresse valide. </div>
+            </div>
+          </div> 
 
         <div class="form-group">
           <label for=telephone>N° Téléphone</label>
-          <input type="text" appPhoneMask  
-                class="form-control"  
-                formControlName="telephone" [ngClass]="{'is-invalid': form.get('telephone').touched && form.get('telephone').invalid}"  />
+          <input type="text" appPhoneMask minlength="16" class="form-control" formControlName="telephone" [ngClass]="{'is-invalid': form.get('telephone').touched && form.get('telephone').invalid}"  />
           <div class="invalid-feedback" *ngIf="form.get('telephone').touched && form.get('telephone').invalid">
             <div *ngIf="form.get('telephone').errors.required">N° de téléphone est requis. </div>
             <div *ngIf="form.get('telephone').errors.tel ">Veuillez entrer un numéro valide. </div>
@@ -45,12 +43,16 @@
         </div> 
         <div class="form-group">
           <label for=profile>Profile</label>
-          <select class="form-control">
-            <option *ngFor="let info of profile">
-              <span> {{info.titre}}</span>
+          <select class="form-control" formControlName="profile" [ngClass]="{'is-invalid': form.get('profile').touched && form.get('profile').invalid}">           
+            <option *ngFor="let specialite of profile" [ngValue]="specialite">
+              <span> {{specialite.titre}}</span>
             </option>
           </select>
+          <div class="invalid-feedback">
+            <div>Profile est requis. </div>
+          </div>
         </div>
+
         <div class="form-group" id="alignement">         
           <button type="submit" class="btn btn-primary" [disabled]="!form.valid" (click)="ajouterCollaborateur()">Enregistrer</button>
         </div>
