--- a/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
@@ -4,48 +4,53 @@
       <h2>Coordonnées collaborateur</h2>
       <form name="form" [formGroup]="form">
         <div class="form-group">
-          <label for=nom>Nom</label>
-          <input type="text" class="form-control" formControlName="nom" minlength="3" [ngClass]="{'is-invalid': form.get('nom').touched && form.get('nom').invalid}" />
+          <label for=lastName>Nom</label>
+          <input type="text" class="form-control" formControlName="lastName" minlength="3" [ngClass]="{'is-invalid': form.get('lastName').touched && form.get('lastName').invalid}" />
           <div class="invalid-feedback">
             <div>Nom est requis. </div>
           </div>
         </div>
         <div class="form-group">
-          <label for=prenom>Prénom</label>
-          <input type="text" class="form-control" formControlName="prenom" minlength="3" [ngClass]="{'is-invalid': form.get('prenom').touched && form.get('prenom').invalid}" />
+          <label for=name>Prénom</label>
+          <input type="text" class="form-control" formControlName="name" minlength="3" [ngClass]="{'is-invalid': form.get('name').touched && form.get('name').invalid}" />
           <div class="invalid-feedback">
             <div>Prénom est requis. </div>
           </div>
         </div>
         <div class="form-group">
-          <label for=dateArrive>Date d'arrivé</label>
-          <input type="text" class="form-control" bsDatepicker formControlName="dateArrive" [ngClass]="{'is-invalid': form.get('dateArrive').touched && form.get('dateArrive').invalid}" />
+          <label for=dateArrival>Date d'arrivé</label>
+          <input type="text" class="form-control" 
+          [minDate]="minDate"
+            [maxDate]="maxDate"
+            #dp="bsDatepicker"
+            bsDatepicker
+          formControlName="dateArrival" [ngClass]="{'is-invalid': form.get('dateArrival').touched && form.get('dateArrival').invalid}" />
           <div class="invalid-feedback">
             <div>Date d'arrivé est requis. </div>
           </div>
         </div>       
           <div class="form-group">
-            <label for=email>Email</label>
-            <input type="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': form.get('email').touched && form.get('email').invalid}"  />
-            <div class="invalid-feedback" *ngIf="form.get('email').touched && form.get('email').invalid">
-              <div *ngIf="form.get('email').errors.required">Email est requis. </div>
-              <div *ngIf="form.get('email').errors.email">Veuillez entrer une adresse valide. </div>
+            <label for=mailProfesional>Email</label>
+            <input type="email" class="form-control" formControlName="mailProfesional" [ngClass]="{'is-invalid': form.get('mailProfesional').touched && form.get('mailProfesional').invalid}"  />
+            <div class="invalid-feedback" *ngIf="form.get('mailProfesional').touched && form.get('mailProfesional').invalid">
+              <div *ngIf="form.get('mailProfesional').errors.required">Email est requis. </div>
+              <div *ngIf="form.get('mailProfesional').errors.email">Veuillez entrer une adresse valide. </div>
             </div>
           </div> 
 
         <div class="form-group">
-          <label for=telephone>N° Téléphone</label>
-          <input type="text" appPhoneMask minlength="16" class="form-control" formControlName="telephone" [ngClass]="{'is-invalid': form.get('telephone').touched && form.get('telephone').invalid}"  />
-          <div class="invalid-feedback" *ngIf="form.get('telephone').touched && form.get('telephone').invalid">
-            <div *ngIf="form.get('telephone').errors.required">N° de téléphone est requis. </div>
-            <div *ngIf="form.get('telephone').errors.tel ">Veuillez entrer un numéro valide. </div>
+          <label for=phoneNumber>N° Téléphone</label>
+          <input type='text' mask='(000) 000-0000' class="form-control" formControlName="phoneNumber" [ngClass]="{'is-invalid': form.get('phoneNumber').touched && form.get('phoneNumber').invalid}"  />
+          <div class="invalid-feedback" *ngIf="form.get('phoneNumber').touched && form.get('phoneNumber').invalid">
+            <div *ngIf="form.get('phoneNumber').errors.required">N° de téléphone est requis. </div>
+            <div *ngIf="form.get('phoneNumber').errors.tel ">Veuillez entrer un numéro valide. </div>
           </div>
         </div> 
         <div class="form-group">
           <label for=profile>Profile</label>
           <select class="form-control" formControlName="profile" [ngClass]="{'is-invalid': form.get('profile').touched && form.get('profile').invalid}">           
             <option *ngFor="let specialite of profile" [ngValue]="specialite">
-              <span> {{specialite.titre}}</span>
+              <span> {{specialite.titleProfile}}</span>
             </option>
           </select>
           <div class="invalid-feedback">
