--- a/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
@@ -5,33 +5,52 @@
       <form name="form" [formGroup]="form">
         <div class="form-group">
           <label for=lastName>Nom</label>
-          <input type="text" class="form-control" formControlName="lastName" minlength="3" [ngClass]="{'is-invalid': form.get('lastName').touched && form.get('lastName').invalid}" />
+          <input 
+            type="text" 
+            class="form-control" 
+            formControlName="lastName" 
+            minlength="3" 
+            [ngClass]="{'is-invalid': form.get('lastName').touched && form.get('lastName').invalid}" 
+          />
           <div class="invalid-feedback">
             <div>Nom est requis. </div>
           </div>
         </div>
         <div class="form-group">
           <label for=name>Prénom</label>
-          <input type="text" class="form-control" formControlName="name" minlength="3" [ngClass]="{'is-invalid': form.get('name').touched && form.get('name').invalid}" />
+          <input 
+            type="text" 
+            class="form-control" 
+            formControlName="name" 
+            minlength="3" 
+            [ngClass]="{'is-invalid': form.get('name').touched && form.get('name').invalid}" 
+          />
           <div class="invalid-feedback">
             <div>Prénom est requis. </div>
           </div>
         </div>
         <div class="form-group">
           <label for=dateArrival>Date d'arrivé</label>
-          <input type="text" class="form-control" 
-          [minDate]="minDate"
+          <input 
+            type="text" class="form-control" 
+            [minDate]="minDate"
             [maxDate]="maxDate"
-            #dp="bsDatepicker"
             bsDatepicker
-          formControlName="dateArrival" [ngClass]="{'is-invalid': form.get('dateArrival').touched && form.get('dateArrival').invalid}" />
+            formControlName="dateArrival" 
+            [ngClass]="{'is-invalid': form.get('dateArrival').touched && form.get('dateArrival').invalid}" 
+          />
           <div class="invalid-feedback">
             <div>Date d'arrivé est requis. </div>
           </div>
         </div>       
           <div class="form-group">
             <label for=mailProfesional>Email</label>
-            <input type="email" class="form-control" formControlName="mailProfesional" [ngClass]="{'is-invalid': form.get('mailProfesional').touched && form.get('mailProfesional').invalid}"  />
+            <input 
+              type="email" 
+              class="form-control" 
+              formControlName="mailProfesional" 
+              [ngClass]="{'is-invalid': form.get('mailProfesional').touched && form.get('mailProfesional').invalid}"  
+            />
             <div class="invalid-feedback" *ngIf="form.get('mailProfesional').touched && form.get('mailProfesional').invalid">
               <div *ngIf="form.get('mailProfesional').errors.required">Email est requis. </div>
               <div *ngIf="form.get('mailProfesional').errors.email">Veuillez entrer une adresse valide. </div>
@@ -40,7 +59,13 @@
 
         <div class="form-group">
           <label for=phoneNumber>N° Téléphone</label>
-          <input type='text' mask='(000) 000-0000' class="form-control" formControlName="phoneNumber" [ngClass]="{'is-invalid': form.get('phoneNumber').touched && form.get('phoneNumber').invalid}"  />
+          <input 
+            type='text' 
+            mask='(000) 000-0000' 
+            class="form-control" 
+            formControlName="phoneNumber" 
+            [ngClass]="{'is-invalid': form.get('phoneNumber').touched && form.get('phoneNumber').invalid}"  
+          />
           <div class="invalid-feedback" *ngIf="form.get('phoneNumber').touched && form.get('phoneNumber').invalid">
             <div *ngIf="form.get('phoneNumber').errors.required">N° de téléphone est requis. </div>
             <div *ngIf="form.get('phoneNumber').errors.tel ">Veuillez entrer un numéro valide. </div>
@@ -48,7 +73,11 @@
         </div> 
         <div class="form-group">
           <label for=profile>Profile</label>
-          <select class="form-control" formControlName="profile" [ngClass]="{'is-invalid': form.get('profile').touched && form.get('profile').invalid}">           
+          <select 
+            class="form-control" 
+            formControlName="profile" 
+            [ngClass]="{'is-invalid': form.get('profile').touched && form.get('profile').invalid}"
+          >           
             <option *ngFor="let specialite of profile" [ngValue]="specialite">
               <span> {{specialite.titleProfile}}</span>
             </option>
@@ -57,9 +86,15 @@
             <div>Profile est requis. </div>
           </div>
         </div>
-
         <div class="form-group" id="alignement">         
-          <button type="submit" class="btn btn-primary" [disabled]="!form.valid" (click)="ajouterCollaborateur()">Enregistrer</button>
+          <button 
+            type="submit" 
+            class="btn btn-primary" 
+            [disabled]="!form.valid" 
+            (click)="ajouterCollaborateur()"
+          >
+            Enregistrer
+          </button>
         </div>
       </form>
     </div>
