--- a/src/app/user-registry/components/user-information.component.html
+++ b/src/app/user-registry/components/user-information.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <button class="btn btn-primary" [routerLink]="['/user-experiance']" routerLinkActive="router-link-active" >AJOUT EXPERIENCE</button>
+    <button class="btn btn-primary m-3" [routerLink]="['/user-experiance']" routerLinkActive="router-link-active" >AJOUT EXPERIENCE</button>
 </div>
