Implementation formulaire et mock des services (#5)
* Implementation formulaire et mock des services

* Integration des Reactive Form Angular

* Mise en place de JSON et update suite a pull request

* Correction des erreurs en commentaire dans le pull request

* L'ajout de la redirection aprés l'ajout des cordonees vers les experiences

* Correction de qlq noms des attributs et importation du module ngx-mask pour le Mask de téléphone

* Correction de qlq noms des attributs et importation du module ngx-mask pour le Mask de téléphone

--- a/src/app/user-registry/components/user-information.component.html
+++ b/src/app/user-registry/components/user-information.component.html
@@ -1,3 +1,4 @@
 <div class="container">
+    <app-user-basic-information></app-user-basic-information>
     <app-user-experiance></app-user-experiance>
 </div>
