--- a/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
@@ -2,97 +2,52 @@
   <div class="row">
     <div class="col-10">
       <h2>Coordonnées collaborateur</h2>
-      <form name="form" [formGroup]="form">
+      <form name="userBasicInformationForm" [formGroup]="userBasicInformationForm">
+        
+        <!-- lastname -->
         <div class="form-group">
-          <label for=lastName>Nom</label>
-          <input 
-            type="text" 
-            class="form-control" 
-            formControlName="lastName" 
-            minlength="3" 
-            [ngClass]="{'is-invalid': form.get('lastName').touched && form.get('lastName').invalid}" 
-          />
+          <label for=lastname>Nom</label>
+          <input  type="text"  class="form-control" formControlName="lastname" 
+                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('lastname').touched && userBasicInformationForm.get('lastname').invalid }" />
           <div class="invalid-feedback">
             <div>Nom est requis. </div>
           </div>
         </div>
+
+        <!-- firstname -->
         <div class="form-group">
-          <label for=name>Prénom</label>
-          <input 
-            type="text" 
-            class="form-control" 
-            formControlName="name" 
-            minlength="3" 
-            [ngClass]="{'is-invalid': form.get('name').touched && form.get('name').invalid}" 
-          />
+          <label for=firstname>Prénom</label>
+          <input  type="text"  class="form-control" formControlName="firstname" 
+                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('firstname').touched && userBasicInformationForm.get('firstname').invalid }" />
           <div class="invalid-feedback">
             <div>Prénom est requis. </div>
           </div>
         </div>
-        <div class="form-group">
-          <label for=dateArrival>Date d'arrivé</label>
-          <input 
-            type="text" class="form-control" 
-            [minDate]="minDate"
-            [maxDate]="maxDate"
-            bsDatepicker
-            formControlName="dateArrival" 
-            [ngClass]="{'is-invalid': form.get('dateArrival').touched && form.get('dateArrival').invalid}" 
-          />
-          <div class="invalid-feedback">
-            <div>Date d'arrivé est requis. </div>
-          </div>
-        </div>       
-          <div class="form-group">
-            <label for=mailProfesional>Email</label>
-            <input 
-              type="email" 
-              class="form-control" 
-              formControlName="mailProfesional" 
-              [ngClass]="{'is-invalid': form.get('mailProfesional').touched && form.get('mailProfesional').invalid}"  
-            />
-            <div class="invalid-feedback" *ngIf="form.get('mailProfesional').touched && form.get('mailProfesional').invalid">
-              <div *ngIf="form.get('mailProfesional').errors.required">Email est requis. </div>
-              <div *ngIf="form.get('mailProfesional').errors.email">Veuillez entrer une adresse valide. </div>
-            </div>
-          </div> 
 
+        <!-- email -->
         <div class="form-group">
-          <label for=phoneNumber>N° Téléphone</label>
-          <input 
-            type='text' 
-            mask='(000) 000-0000' 
-            class="form-control" 
-            formControlName="phoneNumber" 
-            [ngClass]="{'is-invalid': form.get('phoneNumber').touched && form.get('phoneNumber').invalid}"  
-          />
-          <div class="invalid-feedback" *ngIf="form.get('phoneNumber').touched && form.get('phoneNumber').invalid">
-            <div *ngIf="form.get('phoneNumber').errors.required">N° de téléphone est requis. </div>
-            <div *ngIf="form.get('phoneNumber').errors.tel ">Veuillez entrer un numéro valide. </div>
+          <label for=mailProfesional>Email</label>
+          <input  type="email" class="form-control" formControlName="mailProfesional" 
+                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('mailProfesional').touched && userBasicInformationForm.get('mailProfesional').invalid}" />
+          <div class="invalid-feedback" *ngIf="userBasicInformationForm.get('mailProfesional').touched && userBasicInformationForm.get('mailProfesional').invalid">
+            <div *ngIf="userBasicInformationForm.get('mailProfesional').errors.required">Email est requis. </div>
+            <div *ngIf="userBasicInformationForm.get('mailProfesional').errors.email">Veuillez entrer une adresse valide. </div>
           </div>
         </div> 
+
+        <!-- phone number -->
         <div class="form-group">
-          <label for=profile>Profile</label>
-          <select 
-            class="form-control" 
-            formControlName="profile" 
-            [ngClass]="{'is-invalid': form.get('profile').touched && form.get('profile').invalid}"
-          >           
-            <option *ngFor="let specialite of profile" [ngValue]="specialite">
-              <span> {{specialite.titleProfile}}</span>
-            </option>
-          </select>
-          <div class="invalid-feedback">
-            <div>Profile est requis. </div>
+          <label for=phoneNumber>N° Téléphone</label>
+          <input  type='text' mask='(000) 000-0000' class="form-control" formControlName="phoneNumber" 
+                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('phoneNumber').touched && userBasicInformationForm.get('phoneNumber').invalid }" />
+          <div class="invalid-feedback" *ngIf="userBasicInformationForm.get('phoneNumber').touched && userBasicInformationForm.get('phoneNumber').invalid">
+            <div *ngIf="userBasicInformationForm.get('phoneNumber').errors.required">N° de téléphone est requis. </div>
+            <div *ngIf="userBasicInformationForm.get('phoneNumber').errors.tel ">Veuillez entrer un numéro valide. </div>
           </div>
-        </div>
+        </div> 
+        
         <div class="form-group" id="alignement">         
-          <button 
-            type="submit" 
-            class="btn btn-primary" 
-            [disabled]="!form.valid" 
-            (click)="ajouterCollaborateur()"
-          >
+          <button class="btn btn-primary" [disabled]="!userBasicInformationForm.valid" (click)="storeForm()" >
             Enregistrer
           </button>
         </div>
