--- a/src/app/shared/components/lmt-autocomplete/lmt-autocomplete.component.html
+++ b/src/app/shared/components/lmt-autocomplete/lmt-autocomplete.component.html
@@ -1,1 +1,26 @@
-<p>lmt-autocomplete works!</p>
+<mat-form-field style = "width: 100%">
+    <mat-chip-list #chipList aria-label="skill selection">
+       
+      <mat-chip *ngFor          = "let selectedItem of selectedItems"
+                [selectable]    = "true"
+                [removable]     = "true" >
+        {{selectedItem.name}}
+        <mat-icon matChipRemove *ngIf = "removable">cancel</mat-icon>
+      </mat-chip>
+      
+      <input  placeholder="New item..."
+              #itemInput
+              [formControl]                   = "itemControl"
+              [matAutocomplete]               = "auto"
+              [matChipInputFor]               = "chipList"
+              [matChipInputSeparatorKeyCodes] = "lmtAutocompleteConfig?.seperatorKeyCodes"
+              (matChipInputTokenEnd)          = "addElement($event)"
+        >
+    </mat-chip-list>
+    <mat-autocomplete #auto = "matAutocomplete" (optionSelected) = "selectedItem($event)" >
+      <mat-option *ngFor="let filteredItem of filteredItems | async" [value]="filteredItem">
+        {{ filteredItem[lmtAutocompleteParam.attributeName] }}
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
+  
