--- a/src/app/shared/components/lmt-autocomplete/lmt-autocomplete.component.html
+++ b/src/app/shared/components/lmt-autocomplete/lmt-autocomplete.component.html
@@ -14,9 +14,7 @@
               [formControl]                   = "itemControl"
               [matAutocomplete]               = "auto"
               [matChipInputFor]               = "chipList"
-              [matChipInputSeparatorKeyCodes] = "lmtAutocompleteConfig?.seperatorKeyCodes"
-              (matChipInputTokenEnd)          = "addElement($event)"
-        >
+              [matChipInputSeparatorKeyCodes] = "lmtAutocompleteConfig?.seperatorKeyCodes">
     </mat-chip-list>
     <mat-autocomplete #auto = "matAutocomplete" (optionSelected) = "selectedItem($event)" >
       <mat-option *ngFor="let filteredItem of filteredItems | async" [value]="filteredItem">
