--- a/src/app/shared/components/lmt-autocomplete/lmt-autocomplete.component.html
+++ b/src/app/shared/components/lmt-autocomplete/lmt-autocomplete.component.html
@@ -1,12 +1,12 @@
-<mat-form-field style = "width: 100%">
+<mat-form-field *ngIf="( componentReady | async )" style = "width: 100%">
     <mat-chip-list #chipList aria-label="skill selection">
        
       <mat-chip *ngFor          = "let selectedItem of selectedItems"
-                [selectable]    = "true"
-                [removable]     = "true" 
+                [selectable]    = "lmtAutocompleteConfig?.selectable"
+                [removable]     = "lmtAutocompleteConfig?.removable" 
                 (removed)       = "removeItem( selectedItem )">
         {{ selectedItem[lmtAutocompleteParam.attributeNameToDisplay] }}
-        <mat-icon matChipRemove *ngIf = "true">cancel</mat-icon>
+        <mat-icon matChipRemove *ngIf = "lmtAutocompleteConfig?.removable">cancel</mat-icon>
       </mat-chip>
       
       <input  placeholder="New item..."
