--- a/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
+++ b/src/app/user-registry/user-basic-information/components/user-basic-information.component.html
@@ -26,28 +26,28 @@
 
         <!-- email -->
         <div class="form-group">
-          <label for=mailProfesional>Email</label>
-          <input  type="email" class="form-control" formControlName="mailProfesional" 
-                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('mailProfesional').touched && userBasicInformationForm.get('mailProfesional').invalid}" />
-          <div class="invalid-feedback" *ngIf="userBasicInformationForm.get('mailProfesional').touched && userBasicInformationForm.get('mailProfesional').invalid">
-            <div *ngIf="userBasicInformationForm.get('mailProfesional').errors.required">Email est requis. </div>
-            <div *ngIf="userBasicInformationForm.get('mailProfesional').errors.email">Veuillez entrer une adresse valide. </div>
+          <label for=mail>Email</label>
+          <input  type="email" class="form-control" formControlName="mail" 
+                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('mail').touched && userBasicInformationForm.get('mail').invalid}" />
+          <div class="invalid-feedback" *ngIf="userBasicInformationForm.get('mail').touched && userBasicInformationForm.get('mail').invalid">
+            <div *ngIf="userBasicInformationForm.get('mail').errors.required">Email est requis. </div>
+            <div *ngIf="userBasicInformationForm.get('mail').errors.email">Veuillez entrer une adresse valide. </div>
           </div>
         </div> 
 
         <!-- phone number -->
         <div class="form-group">
-          <label for=phoneNumber>N° Téléphone</label>
-          <input  type='text' mask='(000) 000-0000' class="form-control" formControlName="phoneNumber" 
-                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('phoneNumber').touched && userBasicInformationForm.get('phoneNumber').invalid }" />
-          <div class="invalid-feedback" *ngIf="userBasicInformationForm.get('phoneNumber').touched && userBasicInformationForm.get('phoneNumber').invalid">
-            <div *ngIf="userBasicInformationForm.get('phoneNumber').errors.required">N° de téléphone est requis. </div>
-            <div *ngIf="userBasicInformationForm.get('phoneNumber').errors.tel ">Veuillez entrer un numéro valide. </div>
+          <label for=phonenumber>N° Téléphone</label>
+          <input  type='text' mask='(000) 000-0000' class="form-control" formControlName="phonenumber" 
+                  [ngClass]="{ 'is-invalid': userBasicInformationForm.get('phonenumber').touched && userBasicInformationForm.get('phonenumber').invalid }" />
+          <div class="invalid-feedback" *ngIf="userBasicInformationForm.get('phonenumber').touched && userBasicInformationForm.get('phonenumber').invalid">
+            <div *ngIf="userBasicInformationForm.get('phonenumber').errors.required">N° de téléphone est requis. </div>
+            <div *ngIf="userBasicInformationForm.get('phonenumber').errors.tel ">Veuillez entrer un numéro valide. </div>
           </div>
         </div> 
         
         <div class="form-group" id="alignement">         
-          <button class="btn btn-primary" [disabled]="!userBasicInformationForm.valid" (click)="storeForm()" >
+          <button class="btn btn-primary" [disabled]="!userBasicInformationForm.valid" (click)="saveUserBasicInformationForm()" >
             Enregistrer
           </button>
         </div>
