Remove unused scripts

--- a/src/app/user-registry/user-experiance/components/user-experiance.component.html
+++ b/src/app/user-registry/user-experiance/components/user-experiance.component.html
@@ -4,7 +4,7 @@
                                         (click)    = "addProjectHandler()">AJOUTER PROJET</button>
 
     <app-user-project   *ngIf             = "projectEditionMode"  
-                        (newProjectAdded) = "onNewProjectAdded($event)">
+                        (newProjectAdded) = "onNewProjectAdded()">
 
     </app-user-project>
 </div>
